--- a/gradle.properties
+++ b/gradle.properties
@@ -4,3 +4,4 @@ quarkusPluginVersion=1.4.2.Final
 quarkusPlatformArtifactId=quarkus-universe-bom
 quarkusPlatformGroupId=io.quarkus
 quarkusPlatformVersion=1.4.2.Final
+lombokVersion=1.18.12
