--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 # Configuration file
 # key = value
+quarkus.datasource.url:jdbc:postgresql://localhost:5432/sandbox
+quarkus.datasource.driver:org.postgresql.Driver
+quarkus.datasource.username:sandbox
+quarkus.datasource.password:sandbox
